# onboard-switches-iac

./: .gitignore  README.md  ansible.cfg  cliconf_plugins  example.sh  inventory.yml  inventory_collector.py  playbook.yml  pyproject.toml  terminal_plugins  test-collection.sh
ansible_collections/openrail/switchos/: README.md
ansible_collections/openrail/switchos/plugins/cliconf/: hirschmann.py  lantech.py
experiments/: ansible.cfg  inventory.ini  playbook.yml  ssh_command.py
models/hirschmann/vlans/: deleted_example_01.txt  hirschmann_vlans.yaml  merged_example_01.txt
openrail/switchos/: galaxy.yml  inventory_template.ini  playbook.yml  test-collection.sh  test_plugin_loading.yml  test_switchos_plugins.yml  test_terminal_plugin.yml
openrail/switchos/plugins/action/: hello_world.py
openrail/switchos/plugins/cliconf/: hirschmann.py  switchos.py
openrail/switchos/plugins/module_utils/: switchos.py
openrail/switchos/plugins/modules/: switchos_command.py
openrail/switchos/plugins/terminal/: hirschmann.py  switchos.py
topologyDiscovery/: ARCHITECTURE.md  README.md  StartDiscovery.py  TopologyDiscovery.py  credentials.yaml  data_model.py  logging_config.py  network_discovery_manager.py  requirements.txt  ssh_client.py  switch_detector.py  test_hirschmann.py  test_ssh_connection.py
topologyDiscovery/discovery/: BaseDiscovery.py  HirschmannDiscovery.py  KontorDiscovery.py  KontronDiscovery.py  LantechDiscovery.py  NomadDiscovery.py  __init__.py
topologyDiscovery/output/: inventory.yaml  topology_192_168_1_31.json
(+21 files in other folders)
