[project]
name = "onboard-switches-iac"
version = "0.1.0"
description = ""
authors = [
    {name = "u231555",email = "ferdinand.niedermann@sbb.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible (>=11.7.0,<12.0.0)",
    "ansible-pylibssh (>=1.2.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
